Added html webpage

--- a/DayTwo/index.html
+++ b/DayTwo/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Welcome to Day 2</h1>
 
-    <script src="" type="text/javascript"></script>
+    <script src="day2class.js" type="text/javascript"></script>
 </body>
 </html>
