Editing HTML page content

--- a/DayTwo/index.html
+++ b/DayTwo/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to Day 2</h1>
+    <h3>Open developer console by pressing ctrl + shift + i to see the output.</h3>
     <script src="day2class.js" type="text/javascript"></script>
 </body>
 </html>
